frontend/test/should_fail/inh_004.grg
using inh_model_004;

rule bla { pattern{} replace{} }
